Prevent sections from collapsing too much
Use min-width to prevent sections from action odd when browser is too narrow.

--- a/style.css
+++ b/style.css
@@ -16,9 +16,9 @@ body{
 }
 
 .section{
-    flex: none;
     flex-basis: 400px;
     max-height: 406px;
+    min-width: 700px;
 }
 
 .section.five {
